--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2015 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,11 +17,15 @@
 <resources>
 
     <style name="Theme.DesignDemo" parent="Base.Theme.DesignDemo">
+
+    </style>
+
+    <style name="Theme.Sp" parent="Base.Theme.DesignDemo">
     </style>
 
     <style name="Base.Theme.DesignDemo" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorPrimary">#673AB7</item>
-        <item name="colorPrimaryDark">#512DA8</item>
+        <item name="colorPrimary">#4c8181</item>
+        <item name="colorPrimaryDark">#94133941</item>
         <item name="colorAccent">#FF4081</item>
     </style>
 
