--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,13 +14,17 @@
   ~ limitations under the License.
 -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.DesignDemo" parent="Base.Theme.DesignDemo">
 
     </style>
 
     <style name="Theme.Sp" parent="Base.Theme.DesignDemo">
+        <item name="android:selectableItemBackground" tools:targetApi="honeycomb">
+            @drawable/selectable_item_background
+        </item>
+        <item name="selectableItemBackground">@drawable/selectable_item_background</item>
     </style>
 
     <style name="Base.Theme.DesignDemo" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -37,4 +41,14 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="FabStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:src">@drawable/ic_done</item>
+        <item name="borderWidth">0dp</item>
+        <item name="elevation">6dp</item>
+        <item name="pressedTranslationZ">12dp</item>
+        <item name="rippleColor">@android:color/white</item>
+    </style>
 </resources>
